src/test/testData/kubernetes/KUBE001/pod-global-group-zero.yaml.denied
apiVersion: v1
kind: Pod
metadata:
  name: static-web
  labels:
    role: myrole
spec:
  securityContext:
    runAsNonRoot: true
    runAsGroup: <error descr="Container runs as root or can gain root privileges.">0</error>
  containers:
    - name: web
      image: nginx
      ports:
        - name: web
          containerPort: 80
          protocol: TCP